        * Fix ecore-fb to trap sigint (ctrl+c) so it doesnt exit your fb app
        * Fix ecore-fb mouse to swap button 2 and 3 ro work right.

2012-07-13  Jiyoun Park

        * Fix bug in Ecore_extn to call pre/post render function

2012-07-16  Carsten Haitzler (The Rasterman)

        * Fix ecore-x selection handling to fall back to getting
          selection directly if getting targets fails. This fixes e17 to
          elm cnp.

2012-08-01  Mike Blumenkrantz

        * Add ecore_main_fd_handler_file_add() for integrating file descriptors
          from regular files into the main loop

2012-08-01  Rob Bradford

	* Support setting fullscreen on Ecore_Evas's under the Wayland engine
	before they are visible. The fullscreening will then be applied when
	they become visible.

2012-08-01  Rob Bradford

	* Use libxkbcommon function to map keysym to unicode characters in the
	Wayland backend. Removing the need to have our own function to do this
	and increasing the range of supported keysms. Fixes #1105.

2012-08-03  Rob Bradford

	* In the Wayland backend handle the case that events can be received
	for surfaces that have been since destroyed - the client side
	marshaller changes the pointer to NULL to when the object is destroyed
	on the client side. Fixes #1258.

2012-08-09  Cedric Bail

	* Correctly shutdown Ecore_Thread.
	* Add a way to reset Ecore_Thread internal pipe after a fork via ecore_fork_reset.

2012-08-13  Carsten Haitzler (The Rasterman)

        * Fix ecore fork reset function to allow for callbacks to be
          attached so ecore-evas can reset evas async fd on fork.

2012-08-13  Vincent Torri

        * Fix segmentation fault when fd_set pointers are NULL on Windows

2012-08-18  Carsten Haitzler (The Rasterman)

        * Add xkb change events patch from trac.

2012-08-27  Carsten Haitzler (The Rasterman)

        * Add ecore_x custom blanker screensaver enable/disable - cant
          do e17 properly without so add in even in freeze.